<resources>
    <string name="app_name">Wandroid</string>

    <string name="tab_main">主页</string>
    <string name="tab_system">体系</string>
    <string name="tab_my">我的</string>

    <!--主页列表-->
    <string name="list_author">作者</string>
    <string name="list_classification">分类</string>
    <string name="list_time">时间</string>
    <string name="register_state">注册状态：</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="quit_login">退出登录</string>

</resources>
