<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_state"
        android:text="登录状态"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <Button
        app:layout_constraintTop_toBottomOf="@id/tv_state"
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        android:id="@+id/btn_quit"
        android:text="@string/quit_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</android.support.constraint.ConstraintLayout>